fix(Layout): correct preconnects
Add `https`, and vimeo domains.

--- a/src/layout/Layout.astro
+++ b/src/layout/Layout.astro
@@ -40,10 +40,10 @@ const docTitle = `${name}${title ? ` · ${title}` : ''}`
     <link rel="icon" href="/favicon.svg" type="image/svg+xml" />
     <link rel="apple-touch-icon" href="/apple-touch-icon.png" />
 
-    <link rel="preconnect" href="//cdn.sanity.io" />
-    <link rel="dns-prefetch" href="//cdn.sanity.io" />
-    <link rel="preconnect" href="//player.vimeo.com" />
-    <link rel="dns-prefetch" href="//player.vimeo.com" />
+    <link rel="preconnect" href="https://cdn.sanity.io" />
+    <link rel="preconnect" href="https://f.vimeocdn.com" />
+    <link rel="preconnect" href="https://i.vimeocdn.com" />
+    <link rel="preconnect" href="https://arclight.vimeo.com" />
 
     <script>
       document.documentElement.className =
