--- a/src/components/ReelSlideshow.astro
+++ b/src/components/ReelSlideshow.astro
@@ -77,6 +77,7 @@ const backdropAlpha = 0.65
             data-slide
             data-slide-index={i}
             {...(i === 0 && { fetchpriority: 'high' })}
+            style="opacity: 0;"
           />
         ))
       }
@@ -197,7 +198,6 @@ const backdropAlpha = 0.65
     left: 0;
     width: 100%;
     height: auto;
-    opacity: 0;
     transition: opacity 1.5s ease-out;
   }
 
