fix:perf(Reel): hide backdrops showing on load
For some reason, maybe only on reload, backdrops for slides later in the rotation (maybe last in rotation) are showing on load instead of being hidden. Try same fix on these as on the slides themselves, manually setting opacity to 0 directly on the element.

--- a/src/components/ReelSlideshow.astro
+++ b/src/components/ReelSlideshow.astro
@@ -42,7 +42,7 @@ const backdropAlpha = 0.65
       reel.placeholderStills.map((still, i) => (
         <div
           data-slideshow-backdrop
-          style={`background-color: rgb(${slideAvgColorsRGB[i]}, ${backdropAlpha})`}
+          style={`background-color: rgb(${slideAvgColorsRGB[i]}, ${backdropAlpha}); opacity: 0;`}
         />
       ))
     }
