fix: allow `stills` to be null

--- a/src/components/ProjectSets.astro
+++ b/src/components/ProjectSets.astro
@@ -49,13 +49,14 @@ const getTransformedProject = (project) => {
   return {
     ...project,
     tite: markdownTitle,
-    stills: project.stills.map((still) => {
-      return {
-        ...still,
-        maxWidth: maxStillWidth,
-        maxHeight: Math.round(maxStillWidth / still.aspect),
-      }
-    }),
+    stills:
+      project.stills?.map((still) => {
+        return {
+          ...still,
+          maxWidth: maxStillWidth,
+          maxHeight: Math.round(maxStillWidth / still.aspect),
+        }
+      }) || [],
   }
 }
 ---
