fix: correct typo so project titles are markdown-ified

--- a/src/components/ProjectSets.astro
+++ b/src/components/ProjectSets.astro
@@ -48,7 +48,7 @@ const getTransformedProject = (project) => {
 
   return {
     ...project,
-    tite: markdownTitle,
+    title: markdownTitle,
     stills:
       project.stills?.map((still) => {
         return {
